# Raytracer

./: CMakeLists.txt  LICENSE
include/: bitmap.hpp  camera.hpp  color.hpp  intersection.hpp  light.hpp  model.hpp  ray.hpp  raytracer.hpp  scene.hpp  sphere.hpp
src/: light.cpp  main.cpp  model.cpp  raytracer.cpp  sphere.cpp
